# finance_agent

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.production  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  migrate_csv_to_db.py  railway.toml  setup.sh
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  setup.sh
backend/: .env.example  auth.py  database.py  db_operations.py  main.py  migration_endpoint.py  pyproject.toml
data/: .gitkeep  README.md
documentation/: CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  README.md  SECURITY.md  UV_GUIDE.md
documentation/images/: README.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: AIInsights.css  AIInsights.jsx  Dashboard.css  Dashboard.jsx  ExpenseList.css  ExpenseList.jsx  Login.css  Login.jsx
