[project]
name = "finance-analysis-backend"
version = "1.0.0"
description = "Finance Analysis API with AI insights"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pandas>=2.1.3",
    "anthropic>=0.8.1",
    "python-dotenv>=1.0.0",
    "slowapi>=0.1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
